# HACKTUES-11-Let-me-code

./: .gitignore
backend/: pyproject.toml
backend/api/: admin.py  models.py  pdf_import.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_delete_note.py  0002_userprofile_delete_income_delete_totalbudget.py  0003_initial.py  0004_alter_transaction_timestamp.py  0004_transaction_remove_income_user_delete_expense_and_more.py  0005_alter_transaction_category.py  0005_transaction_currency_stock.py  0006_stock_name.py  0006_transaction_currency.py  0007_alter_transaction_currency.py  0008_income.py  0009_totalbudget.py
backend/api/views/: assistant.py  client.py  leaflet.py  leaflet_base.py  leaflet_kaufland.py  leaflet_lidl.py  leaflet_user.py  pdf_import.py  redis_client.py  stocks.py  user_summary.py  views.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/pages/: Goals_Budget.jsx  Login.jsx  NotFound.jsx  PDF_enter.jsx  Register.jsx
frontend/src/: App.jsx  layout.jsx  main.jsx
frontend/src/components/: Budget.jsx  BudgetForm.jsx  Chart.jsx  DealSearcher.jsx  Deals.jsx  Footer.jsx  Form.jsx  GoalForm.jsx  IncomeForm.jsx  Loyout.jsx  Message.jsx  Navigation.jsx  PDFEnter.jsx  PDF_enter.jsx  PieChart.jsx  ProgressBarDisplay.jsx  ProgressBarForm.jsx  ProgressBarVars.jsx  RecentTransactions.css  RecentTransactions.jsx  Startpage.jsx  StockChart.jsx  StockWatchlist.jsx  Summary.jsx  TransactionForm.jsx  TransactionList.jsx  main.c
frontend/src/pages/: Bars.jsx  Chat.jsx  (+10 more)
(+29 files in other folders)
